--- a/style.css
+++ b/style.css
@@ -52,17 +52,19 @@
     padding: 30px;
 
     margin-top: 30px;
+    margin-bottom: 30px;
     position: relative;
 }
 body {
     color: white;
     background-image: url('back.png');
     background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover; /* Ensures the background image covers the whole viewport */
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f0f0f0;
     font-family: Arial, sans-serif;
 }
 
@@ -89,8 +91,8 @@ body {
 
 .gallery-image{
 
-    min-width: 300px;
-    min-height: 200px;
+    min-width: 114px;
+    min-height: 114px;
     margin: 10px;
     overflow: hidden;
 }
@@ -99,6 +101,7 @@ body {
     border: solid;
     border-radius: 20px;
     border-color: black;
+    cursor: pointer;
     object-fit: cover;
     transition: 1s;
 }
